--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "next": "^13.4.19",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
